clients/java: First format
- Just applying the new formatting rules to the existing code